# wasm_bindgen_error_handling

./: .rsw.json  fix-wasm.js  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.js
src/: main.ts
src/math_lib/: Cargo.toml
src/math_lib/pkg/: math_lib.d.ts  math_lib.js  math_lib_bg.wasm  math_lib_bg.wasm.d.ts  package.json  wasm_error.ts
src/math_lib/src/: error.rs  lib.rs
