[package]
name = "math_lib"
version = "0.1.0"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"

[lib]
name = "math_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.78"
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.51"
thiserror = "1.0.30"
js-sys = "0.3.55"

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
